@@ -53,16 +53,16 @@ class TemplatesViewTemplate extends JView
 		// Needs to be connected to error.php editor--same as index.php editor
 		JToolBarHelper::custom('edit_error', 'error.png', 'error_f2.png', 'Edit Error Page', false, false);
 		JToolBarHelper::custom('choose_css', 'css.png', 'css_f2.png', 'Edit CSS', false, false);
-	JToolBarHelper::divider();
+		JToolBarHelper::divider();
 
 		JToolBarHelper::cancel('cancel', 'Close');
 		JToolBarHelper::divider();
 		JToolBarHelper::help('screen.templates');
 
-		$data		= &$this->get('Data');
-		$params		= &$this->get('CurrentParams');
-		$template	= &$this->get('Template');
-		$parametersets		= &$this->get('Parametersets');
+		$data			= $this->get('Data');
+		$params			= $this->get('CurrentParams');
+		$template		= $this->get('Template');
+		$parametersets	= $this->get('Parametersets');
 
 		if (!$template) {
 			return JError::raiseWarning(500, JText::_('Template not specified'));
@@ -73,13 +73,13 @@ class TemplatesViewTemplate extends JView
 		$ftp = &JClientHelper::setCredentialsFromRequest('ftp');
 
 		$this->assignRef('lists',		$lists);
-		$this->assignRef('data',			$data);
-		$this->assign('option',		JRequest::getCMD('option'));
+		$this->assignRef('data',		$data);
+		$this->assign('option',			JRequest::getCMD('option'));
 		$this->assignRef('client',		$client);
 		$this->assignRef('ftp',			$ftp);
 		$this->assignRef('template',	$template);
 		$this->assignRef('params',		$params);
-		$this->assignRef('paramsets',		$parametersets);
+		$this->assignRef('paramsets',	$parametersets);
 
 		parent::display($tpl);
 	}
